--- a/src/component/slide_on/MenuToggleButtonOff.css
+++ b/src/component/slide_on/MenuToggleButtonOff.css
@@ -6,8 +6,18 @@
   }
 
   .cross {
-    width: 40px;
-    height: 6px;
+    width: 33px;
+    height: 4px;
     background-color: black;
     margin: 6px 0px;
-}
+    display: block;
+ 
+  }
+  #cross1{
+    transform: rotate(45deg);
+    transform-origin: 20% 83%;
+  }
+  #cross2{
+    transform: rotate(-45deg);
+    transform-origin: 36% 80%;
+  }
