--- a/src/component/toolBar/MenuToggleButton.css
+++ b/src/component/toolBar/MenuToggleButton.css
@@ -7,14 +7,17 @@
   }
 
   .bar {
-    width: 40px;
-    height: 6px;
+    width: 33px;
+    height: 4px;
     background-color: black;
     margin: 6px 0px;
+    display: block;
+
 }
 @media screen and (max-width:700px){
 .wrap{
   display: block;
   cursor: pointer;
 }
+
 }
