--- a/src/component/slide_on/SlideOn.css
+++ b/src/component/slide_on/SlideOn.css
@@ -1,18 +1,25 @@
 .slidebar {
     top: 0;
     left: 0;
-    width: 70%;
+    width: 40%;
     max-width: 400px;
     position: fixed;
-    background-color: aqua;
+    background-color: rgb(54, 92, 92);
+    text-align: center;
     height: 100%;
     z-index: 100;
 }
+
 .slidebar a{
     text-decoration: none;
+    font-size: 18px;
+    color: white;
+
+
+
 }
 
 .slidebar li{
     list-style: none;
-    margin-top: 12px;
+    margin-top: 40px;
 }
