--- a/src/component/style/Behandling.css
+++ b/src/component/style/Behandling.css
@@ -1,5 +1,4 @@
-
- .behandling img {
+.behandling img {
   width: 200px;
   height: 200px;
   margin-bottom: 10px;
@@ -9,9 +8,11 @@
   filter: none;
 }
 
-
-.behandling-container{
-display:flex
+.behandling-container {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+justify-content: space-around;
+position: static;
 
 }
-
