--- a/src/component/style/Behandling.css
+++ b/src/component/style/Behandling.css
@@ -1,11 +1,9 @@
 .behandling-page {
-  background-color: burlywood;
+  background-color: rgb(14, 68, 85);
 }
 .container {
   display: flex;
   flex-wrap: wrap;
-  flex-flow: row wrap;
-  align-items: stretch;
 }
 .page-welcome {
   width: 300px;
@@ -22,17 +20,27 @@
   position: relative;
   margin-right: 30px;
   margin-bottom: 20px;
-}
-.behandling-image {
   width: 300px;
   height: 300px;
+}
+.container :nth-child(odd),.container :nth-child(even){
+  flex-grow: 2;
+}
+.behandling-image {
+  width: 100%;
+height: 100%;
+
   display: block;
 }
-.behandling-image :nth-child(odd) {
-  flex-grow: 1;
+.behandling-image img{
+  width: 100%;
+  height:100%
 }
-.behandling-image :nth-child(even) {
-  flex-grow: 2;
+
+.behandling-name{
+  position: absolute;
+  top: 80%;
+  left: 30%;
 }
 
 .behandling-info {
@@ -43,7 +51,7 @@
   width: 100%;
   opacity: 0;
   transition: 0.5s ease;
-  background-color: rgb(157, 167, 170);
+  background-color: rgb(17, 63, 77);
 }
 .behandling-text {
   color: white;
