--- a/src/component/style/Behandling.css
+++ b/src/component/style/Behandling.css
@@ -1,6 +1,7 @@
 .behandling-page {
   background-color: rgb(14, 68, 85);
 }
+
 .container {
   display: flex;
   flex-wrap: wrap;
@@ -23,21 +24,20 @@
   width: 300px;
   height: 300px;
 }
-.container :nth-child(odd),.container :nth-child(even){
+.container :nth-child(odd),
+.container :nth-child(even) {
   flex-grow: 2;
 }
 .behandling-image {
   width: 100%;
-height: 100%;
-
-  display: block;
+  height: 100%;
 }
-.behandling-image img{
+.behandling-image img {
   width: 100%;
-  height:100%
+  height: 100%;
 }
 
-.behandling-name{
+.behandling-name {
   position: absolute;
   top: 80%;
   left: 30%;
