--- a/src/component/Header/navBar.css
+++ b/src/component/Header/navBar.css
@@ -1,55 +1,43 @@
-
-.toolbar{
-    background: rgb(160, 212, 167);
-    position: fixed;
-    width: 100%;
-    top: 0%;
-    left: 0%;
-
+.toolbar {
+  background: rgb(160, 212, 167);
+  position: fixed;
+  width: 100%;
+  top: 0%;
+  left: 0%;
+  z-index: 1;
 }
-.toolbar__logo{
-    margin-left: 100px;
+.toolbar__logo {
+  margin-left: 100px;
 }
-.toolbar__logo img{
-width: 100px;
-height: 50px;}
-.spacer{
-    flex: 1;
+.toolbar__logo img {
+  width: 100px;
+  height: 50px;
 }
-.toolbar__navigation{
-display: flex;
+.spacer {
+  flex: 1;
+}
+.toolbar__navigation {
+  display: flex;
 }
 
-.toolbar__navigation-items ul{
-    display: flex;
-    justify-content: space-around;
+.toolbar__navigation-items ul {
+  display: flex;
+  justify-content: space-around;
 }
-.toolbar__navigation-items{
-    margin-right: 80px;
+.toolbar__navigation-items {
+  margin-right: 80px;
+  z-index: 0;
 }
-.toolbar__navigation-items li{
-list-style: none;
-margin-left: 22px;
-
-
+.toolbar__navigation-items li {
+  list-style: none;
+  margin-left: 22px;
 }
-.ring-oss{
-    visibility: hidden;
-margin-right: 80px;
+.toolbar__navigation-items a {
+  text-decoration: none;
+  font-size: 20px;
 }
-.toolbar__navigation-items a{
-    text-decoration: none;
-    font-size: 20px;
-    }
-    @media screen and (max-width:700px){
-        .toolbar__navigation-items{
-          display: none;
-        }
-        .ring-oss{
-visibility:visible;
-        }
-        }
-
-
-
-
+@media screen and (max-width: 700px) {
+  .toolbar__navigation-items {
+    display: none;
+  }
+}
