--- a/src/component/style/Behandling.css
+++ b/src/component/style/Behandling.css
@@ -21,7 +21,7 @@
   position: relative;
   margin-right: 30px;
   margin-bottom: 20px;
-  width: 300px;
+  width: 250px;
   height: 300px;
 }
 .container :nth-child(odd),
@@ -35,6 +35,7 @@
 .behandling-image img {
   width: 100%;
   height: 100%;
+border-radius: 5%
 }
 
 .behandling-name {
