--- a/src/component/slide_bar/SlideOn.css
+++ b/src/component/slide_bar/SlideOn.css
@@ -19,4 +19,42 @@
 .slidebar li {
   list-style: none;
   margin-top: 40px;
+  
 }
+.slidebar li:hover{
+transform: scale(1.1);
+
+}
+/* style the Menu Toggle Button icon */
+.icon-off{
+  height: 50px;
+  width: 50px;
+  display: block;
+
+}
+.crossIcon {
+    width: 5%;
+    padding-top: 10px;
+    margin-left: 12px;
+    margin-right: 16px;
+    display: block;
+
+  
+  }
+
+
+  .cross {
+    width: 33px;
+    height: 4px;
+    background-color: black;
+    margin: 6px 0px;
+ 
+  }
+  #cross1{
+    transform: rotate(45deg);
+    transform-origin: 20% 83%;
+  }
+  #cross2{
+    transform: rotate(-45deg);
+    transform-origin: 36% 80%;
+  }
