--- a/src/component/Header/navBar.css
+++ b/src/component/Header/navBar.css
@@ -1,43 +1,103 @@
+
+/* style the menu bar */
 .toolbar {
-  background: rgb(160, 212, 167);
-  position: fixed;
   width: 100%;
   top: 0%;
   left: 0%;
   z-index: 1;
-}
-.toolbar__logo {
-  margin-left: 100px;
-}
-.toolbar__logo img {
-  width: 100px;
-  height: 50px;
-}
-.spacer {
-  flex: 1;
+  margin-bottom: 30px;
+  position: absolute;
+background-color:rgb(241, 236, 236);
+filter: opacity(0.7)
 }
 .toolbar__navigation {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  margin-bottom: 30px;
 }
 
-.toolbar__navigation-items ul {
+.toolbar__navigation {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-around;
 }
-.toolbar__navigation-items {
-  margin-right: 80px;
-  z-index: 0;
+.toolbar__navigation_contact{
+margin-top: 12px
 }
-.toolbar__navigation-items li {
+.toolbar__navigation_contact h4{
+  max-width: 40em;
+  font-weight: 400;
+  font-size: 17px;
+  line-height: 1em;
+  font-family: brandon-grotesque;
+  letter-spacing: 0.005em;
+  line-height: 1.2em;
+padding-left: 15px;
+}
+.toolbar__navigation_contact li{
+font-size: 16px;
+font-family: Arial, Helvetica, sans-serif;
+
+}
+
+.toolbar__navigation_logo img {
+  width: 150px;
+  height: 80px;
+}
+.toolbar__navigation_items {
+  font-family: brandon-grotesque;
+
+}
+
+.toolbar__navigation_items ul {
+  display: flex;
+  justify-content: space-around;
+  margin-top:30px;
+}
+
+.toolbar__navigation_items ul li {
   list-style: none;
   margin-left: 22px;
 }
-.toolbar__navigation-items a {
-  text-decoration: none;
-  font-size: 20px;
+.link {
+  font-weight: 300;
+  font-size: 16px;
 }
-@media screen and (max-width: 700px) {
-  .toolbar__navigation-items {
+
+/* style the Menu toggle Button */
+.wrap {
+  width: 5%;
+  margin-left: 12px;
+  margin-right: 16px;
+  padding-top: 5px;
+  display: none;
+
+}
+
+.bar {
+  width: 33px;
+  height: 4px;
+  background-color: black;
+  margin: 6px 0px;
+  display: block;
+
+}
+/* responsive styling  */
+@media screen and (max-width: 600px) {
+  .toolbar__navigation_items,.toolbar__navigation_contact {
     display: none;
   }
+  .wrap{
+    display: block;
+    cursor: pointer;
+  }
+  
+  .toolbar {
+    display: flex;
+justify-content:space-between;
+margin: 0;
+position: relative;
+   }
+   
 }
