--- a/src/component/style/Priser.css
+++ b/src/component/style/Priser.css
@@ -1,24 +1,36 @@
 .price-frame {
-  margin-top: 90px;
+  margin-top: 110px;
+  width: 100%;
+  display: flex;
+  flex-flow: row;
+  background-color: rgb(241, 236, 236);
+}
+.price-container {
   width: 100%;
 }
-
+.table-title {
+  position: absolute;
+  margin-top: 12px;
+  margin-left: 47%;
+  color: rgb(152, 146, 165);
+  font-family: Georgia, "Times New Roman", Times, serif;
+}
 .price-table {
+  margin-top: 50px;
   width: 90%;
-  max-width: 900px;
+  margin-left: 5%;
+  min-width: 250px;
   height: 200px;
   font-size: 20px;
-  margin-left: 22px;
   border: 1px solid;
 }
-button {
-  margin: 35px -40px 0px 0px;
-}
+
 tr:nth-child(even) {
   background-color: rgba(204, 204, 219, 0.212);
 }
-.table-title {
-  margin-left: 47%;
-  font-family: Georgia, "Times New Roman", Times, serif;
-  color: blue;
+
+@media screen and (max-width: 600px) {
+  .price-frame {
+    margin: 0%;
+  }
 }
