--- a/src/component/style/footer.css
+++ b/src/component/style/footer.css
@@ -6,6 +6,7 @@
 li {
   list-style-type: none;
   font-size: 20px;
+  font-family: brandon-grotesque;
 }
 @media screen and (max-width: 600px) {
   .footer-links {
@@ -14,4 +15,11 @@ li {
   .footer-follow {
     text-align: center;
   }
-}
+ 
+}  
+.footer-follow h3 ,.footer-links h3{
+  font-size: 24px;
+  font-family: brandon-grotesque;
+
+
+} 
