--- a/src/component/Header/navBar.css
+++ b/src/component/Header/navBar.css
@@ -1,20 +1,19 @@
-
 /* style the menu bar */
 .toolbar {
   width: 100%;
   top: 0%;
   left: 0%;
   z-index: 1;
-  margin-bottom: 30px;
   position: absolute;
-background-color:rgb(241, 236, 236);
-filter: opacity(0.7)
+  background-color: rgb(241, 236, 236);
+  filter: opacity(0.6);
+  animation-name: show-menu;
+  animation-duration: 4s;
 }
 .toolbar__navigation {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-  margin-bottom: 30px;
 }
 
 .toolbar__navigation {
@@ -22,10 +21,10 @@ filter: opacity(0.7)
   flex-wrap: wrap;
   justify-content: space-around;
 }
-.toolbar__navigation_contact{
-margin-top: 12px
+.toolbar__navigation_contact {
+  margin-top: 12px;
 }
-.toolbar__navigation_contact h4{
+.toolbar__navigation_contact h4 {
   max-width: 40em;
   font-weight: 400;
   font-size: 17px;
@@ -33,12 +32,11 @@ margin-top: 12px
   font-family: brandon-grotesque;
   letter-spacing: 0.005em;
   line-height: 1.2em;
-padding-left: 15px;
+  padding-left: 15px;
 }
-.toolbar__navigation_contact li{
-font-size: 16px;
-font-family: Arial, Helvetica, sans-serif;
-
+.toolbar__navigation_contact li {
+  font-size: 16px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .toolbar__navigation_logo img {
@@ -47,13 +45,12 @@ font-family: Arial, Helvetica, sans-serif;
 }
 .toolbar__navigation_items {
   font-family: brandon-grotesque;
-
 }
 
 .toolbar__navigation_items ul {
   display: flex;
   justify-content: space-around;
-  margin-top:30px;
+  margin-top: 30px;
 }
 
 .toolbar__navigation_items ul li {
@@ -72,7 +69,6 @@ font-family: Arial, Helvetica, sans-serif;
   margin-right: 16px;
   padding-top: 5px;
   display: none;
-
 }
 
 .bar {
@@ -81,23 +77,33 @@ font-family: Arial, Helvetica, sans-serif;
   background-color: black;
   margin: 6px 0px;
   display: block;
-
 }
 /* responsive styling  */
 @media screen and (max-width: 600px) {
-  .toolbar__navigation_items,.toolbar__navigation_contact {
+  .toolbar__navigation_items,
+  .toolbar__navigation_contact {
     display: none;
   }
-  .wrap{
+  .wrap {
     display: block;
     cursor: pointer;
   }
-  
+
   .toolbar {
     display: flex;
-justify-content:space-between;
-margin: 0;
-position: relative;
-   }
+    justify-content: space-between;
+    margin: 0;
+    position: absolute;
    
+
+    
+   
+
+
+  }
+}
+@keyframes show-menu {
+  0% {
+    margin-top: -380px;
+  }
 }
